--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li><a href="#edu">Educational Qualification</a></li>
            <li><a href="#internships">Internship</a></li>
           <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contact-form">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -330,7 +330,7 @@
             <li><a href="#internships">Internships</a></li>
             <li><a href="#edu">Educational Qualification</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#contact-form">Contact</a></li>
           </ul>
         </div>
       </nav>
