--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           >
             Download CV
           </button>
-          <button class="btn btn-color-1" onclick="location.href='./#contact'">
+          <button class="btn btn-color-1" onclick="location.href='./#contact-form'">
             Contact Info
           </button>
         </div>
