--- a/index.html
+++ b/index.html
@@ -291,31 +291,29 @@
 
 
     <section id="contact-form">
-      <h2>Contact Us</h2>
-      <form id="form" action="">
-        <div class="form-group">
-          <label for="name">Name:</label>
-          <input type="text" id="name" name="name" placeholder="Enter your name">
-          <span class="error" id="nameError"></span>
-        </div>
-  
-        <div class="form-group">
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" placeholder="Enter your email">
-          <span class="error" id="emailError"></span>
-        </div>
-  
-        <div class="form-group">
-          <label for="message">Message:</label>
-          <textarea id="message" name="message" placeholder="Your message"></textarea>
-          <span class="error" id="messageError"></span>
-        </div>
-  
-        <button type="submit">Submit</button>
-      </form>
+  <h2>Contact Us</h2>
+  <form id="form" action="">
+    <div class="form-group">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" placeholder="Enter your name">
+      <span class="error" id="nameError" style="color:red;"></span>
+    </div>
 
-    </section>
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" placeholder="Enter your email">
+      <span class="error" id="emailError"></span>
+    </div>
 
+    <div class="form-group">
+      <label for="message">Message:</label>
+      <textarea id="message" name="message" placeholder="Your message"></textarea>
+      <span class="error" id="messageError"></span>
+    </div>
+
+    <button type="submit">Submit</button>
+  </form>
+</section>
 
 
 
@@ -339,24 +337,39 @@
       <p>Copyright &#169; 2024 Sephy Shibu Mathew. All Rights Reserved.</p>
     </footer>
     
-    <script>
-        $("#form").submit((e)=>{
-            e.preventDefault()
-            $.ajax({
-                url:"https://script.google.com/macros/s/AKfycbzrTMb280uj4CqXCIINtZo1Q_nCOPo8yhCZctrwvr5wAaYkYHmB9D2xy3EC3EUKr0A6/exec",
-                data:$("#form").serialize(),
-                method:"post",
-                success:function (response){
-                    alert("Form submitted successfully")
-                    window.location.reload()
-                    //window.location.href="https://google.com"
-                },
-                error:function (err){
-                    alert("Something Error")
     
-                }
-            })
-        })
-    </script>
+<script>
+  $("#form").submit((e) => {
+    e.preventDefault();
+
+    // Validation for the name field
+    const name = $("#name").val();
+    const nameError = $("#nameError");
+    const nameRegex = /^[A-Za-z]+$/; // Regex to allow only letters, no spaces or numbers
+
+    // Clear previous error message
+    nameError.text("");
+
+    // Check if the name is valid
+    if (!nameRegex.test(name)) {
+      nameError.text("Name cannot contain spaces or numbers.");
+      return; // Stop form submission
+    }
+
+    // Proceed with AJAX submission if validation passes
+    $.ajax({
+      url: "https://script.google.com/macros/s/AKfycbzrTMb280uj4CqXCIINtZo1Q_nCOPo8yhCZctrwvr5wAaYkYHmB9D2xy3EC3EUKr0A6/exec",
+      data: $("#form").serialize(),
+      method: "post",
+      success: function (response) {
+        alert("Form submitted successfully");
+        window.location.reload();
+      },
+      error: function (err) {
+        alert("Something Error");
+      }
+    });
+  });
+</script>
   </body>
 </html>
