--- a/index.html
+++ b/index.html
@@ -336,8 +336,7 @@
       </nav>
       <p>Copyright &#169; 2024 Sephy Shibu Mathew. All Rights Reserved.</p>
     </footer>
-    
-    
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
 <script>
   $("#form").submit((e) => {
     e.preventDefault();
