--- a/index.html
+++ b/index.html
@@ -321,21 +321,7 @@
 
 
 
-    <footer>
-      <nav>
-        <div class="nav-links-container">
-          <ul class="nav-links">
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#internships">Internships</a></li>
-            <li><a href="#edu">Educational Qualification</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact-form">Contact</a></li>
-          </ul>
-        </div>
-      </nav>
-      <p>Copyright &#169; 2024 Sephy Shibu Mathew. All Rights Reserved.</p>
-    </footer>
+   
 
   <section id="contact-form">
       <form action="https://script.google.com/macros/s/AKfycbzrTMb280uj4CqXCIINtZo1Q_nCOPo8yhCZctrwvr5wAaYkYHmB9D2xy3EC3EUKr0A6/exec" id="form" novalidate="novalidate">
@@ -387,8 +373,9 @@
   nameError.innerHTML = 'Enter full Name';
   return false;
   }
-  // nameError.innerHTML = '<i class="fa-solid fa-circle-check"></i>';
-  // return true;
+  nameError.innerHTML = '✓'; 
+  nameError.style.color = "green"; // Make the checkmark green
+  return true;
 
   }
   function validateEmail(){
@@ -404,8 +391,9 @@
   emailError.innerHTML = 'Invalid Email';
   return false;
   }
-  // emailError.innerHTML = '<i class="fa-solid fa-circle-check"></i>';
-  // return true;
+  emailError.innerHTML = '✓'; 
+  emailError.style.color = "green"; // Make the checkmark green
+  return true;
   }
   function validateMessage() {
   var message = document.getElementById('message').value;
@@ -413,8 +401,9 @@
   messageError.innerHTML = 'Message is required';
   return false;
   }
-  // messageError.innerHTML = '<i class="fa-solid fa-circle-check"></i>';
-  // return true;
+  messageError.innerHTML = '✓'; 
+  messageError.style.color = "green"; // Make the checkmark green
+  return true;
   }
   
   function validateForm(){
@@ -456,6 +445,20 @@
 
 </script>
 
-
+ <footer>
+      <nav>
+        <div class="nav-links-container">
+          <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#internships">Internships</a></li>
+            <li><a href="#edu">Educational Qualification</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact-form">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+      <p>Copyright &#169; 2024 Sephy Shibu Mathew. All Rights Reserved.</p>
+    </footer>
   </body>
 </html>
