--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
 
 
   $(document).ready(function(){
-  $("#submit-form").submit((e) => {
+  $("#contact-form").submit((e) => {
   e.preventDefault()
   if (validateForm()){
   $.ajax({
