--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="webpprofile.webp" alt="Sephyshibu profile picture" />
+        <img src="crop.webp" alt="Sephyshibu profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
