--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <li><a href="#edu" onclick="toggleMenu()">Educational Qualification</a></li>
           <li><a href="#internships" onclick="toggleMenu()">Internship</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
-          <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+          <li><a href="#contact-form" onclick="toggleMenu()">Contact</a></li>
         </div>
       </div>
     </nav>
