--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
    
 
   <section id="contact-form">
+    <h1>Contact Us</h1>
       <form action="" id="form" novalidate="novalidate">
         <div class="form-group">
           <input type="text" name="name" placeholder="Name" id="name" onkeyup="validateName()" />
